--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html  >
+  <head >
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -23,15 +23,14 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="starter"  >
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
 
      <ion-nav-bar class="bar-royal">
 
-      <ion-nav-back-button>
-
+      <ion-nav-back-button >
       </ion-nav-back-button>
     </ion-nav-bar>
     <!--
@@ -39,6 +38,6 @@
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
     -->
-    <ion-nav-view></ion-nav-view>
+    <ion-nav-view class="badge-stable"></ion-nav-view>
   </body>
 </html>
